src/objects/Savings__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <formula>IF(text(Status_Commitment__c) = &quot;Stretch&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;),
IF(text(Status_Commitment__c) = &quot;Possible&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;),
IF(text(Status_Commitment__c) = &quot;Confirmed&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Math_Basis_Calculation__c</fullName>
        <label>Math / Basis / Calculation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Effective_Date__c</fullName>
        <label>Planned/Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Impact__c</fullName>
        <inlineHelpText>What is the projected Impact of this Savings?</inlineHelpText>
        <label>Projected Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings_Status__c</fullName>
        <label>Savings Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Savings_Type__c</fullName>
        <label>Savings Type</label>
        <picklist>
            <picklistValues>
                <fullName>Avoidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-kind Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Commitment__c</fullName>
        <inlineHelpText>How committed is this savings status?</inlineHelpText>
        <label>Status Commitment</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Impact__c</fullName>
        <formula>Year_1_Actual_Impact__c + Year_2_Actual_Impact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Impact__c</fullName>
        <formula>Year_1_Projected_Impact__c + Year_2_Projected_Impact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Actual_Impact__c</fullName>
        <inlineHelpText>What is the actual Impact of Savings for Year 1?</inlineHelpText>
        <label>Year 1 Actual Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Projected_Impact__c</fullName>
        <inlineHelpText>What is the projected Impact of Savings for Year 1?</inlineHelpText>
        <label>Year 1 Projected Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Actual_Impact__c</fullName>
        <inlineHelpText>What is the actual Impact of Savings for Year 2?</inlineHelpText>
        <label>Year 2 Actual Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Projected_Impact__c</fullName>
        <inlineHelpText>What is the projected Impact of Savings for Year 2?</inlineHelpText>
        <label>Year 2 Projected Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Contracts__c</fullName>
        <label># of Contracts</label>
        <summaryForeignKey>Contract_Savings__c.Savings__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Savings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Savings_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Math_Basis_Calculation__c</columns>
        <columns>Impact__c</columns>
        <columns>Savings_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_Savings</fullName>
        <columns>Account__c</columns>
        <columns>Savings_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Math_Basis_Calculation__c</columns>
        <columns>Savings_Status__c</columns>
        <columns>Status_Commitment__c</columns>
        <columns>Year_1_Projected_Impact__c</columns>
        <columns>Year_2_Projected_Impact__c</columns>
        <columns>Total_Projected_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Savings_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress Savings</label>
    </listViews>
    <nameField>
        <label>Savings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Impact_1_cost_status_is_complete</fullName>
        <active>true</active>
        <description>The Actual Impact fields are required if the cost status is complete.</description>
        <errorConditionFormula>And (
ISPICKVAL(Savings_Status__c, &quot;Complete&quot;),
ISNULL( Year_1_Actual_Impact__c ))</errorConditionFormula>
        <errorDisplayField>Year_1_Actual_Impact__c</errorDisplayField>
        <errorMessage>If cost status is Complete, values in the Year 1 Actual Impact field must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Impact_2_cost_status_is_complete</fullName>
        <active>true</active>
        <description>The Actual Impact fields are required if the cost status is complete.</description>
        <errorConditionFormula>And (
ISPICKVAL(Savings_Status__c, &quot;Complete&quot;),
ISNULL( Year_2_Actual_Impact__c ))</errorConditionFormula>
        <errorDisplayField>Year_2_Actual_Impact__c</errorDisplayField>
        <errorMessage>If cost status is Complete, values in the Year 2 Actual Impact field must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Cost_Contract_Required</fullName>
        <active>false</active>
        <description>If the Savings is Complete, A Contract is required</description>
        <errorConditionFormula>And (
ISPICKVAL(Savings_Status__c, &quot;Complete&quot;),
 of_Contracts__c &gt;0)</errorConditionFormula>
        <errorMessage>A contract is required if this record is Complete. Please add a contract first then change the Savings Status to Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_Eff_req_if_cost_status_is_comp</fullName>
        <active>true</active>
        <description>the planned effective date is required if the cost status is complete.</description>
        <errorConditionFormula>And ( 
ISPICKVAL(Savings_Status__c, &quot;Complete&quot;), 
ISNULL(Planned_Effective_Date__c))</errorConditionFormula>
        <errorMessage>If cost status is Complete, the Planned/Effective Date field must be filled out</errorMessage>
    </validationRules>
</CustomObject>